[package]
name = "tasksitter"
version = "0.1.0"
edition = "2024"
authors = ["Lion Kortlepel <development@kortlepel.com>"]
description = "A workflow runner engine"
license = "MIT"

[dependencies]
thiserror = "2.0.16"
log = "0.4.28"
async-trait = "0.1.89"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }
